--- a/Tamago/Tamago.vcxproj
+++ b/Tamago/Tamago.vcxproj
@@ -59,7 +59,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>TG_PLATFORM_WINDOWS; TG_BUILD_DLL;  _DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Tamago\vendor\spdlog\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Tamago\vendor\spdlog\include; $(SolutionDir)Tamago\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -74,7 +74,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>TG_PLATFORM_WINDOWS; TG_BUILD_DLL;   NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Tamago\vendor\spdlog\include;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Tamago\vendor\spdlog\include; $(SolutionDir)Tamago\src</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -84,6 +84,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Tamago\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\Tamago\Events\Event.h" />
+    <ClInclude Include="src\Tamago\Events\KeyEvent.h" />
+    <ClInclude Include="src\Tamago\Events\MouseEvent.h" />
     <ClInclude Include="src\Tamago\Log.h" />
     <ClInclude Include="src\Tamago.h" />
     <ClInclude Include="src\Tamago\Application.h" />
