--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Tamago/vendor/spdlog"]
 	path = Tamago/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Tamago/vendor/GLFW"]
+	path = Tamago/vendor/GLFW
+	url = https://github.com/Anagreg/glfw
